--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"cSpell.words": ["mpegts", "pixelcast", "RTMP", "webrtc", "WHEP"]
+	"cSpell.words": ["mpegts", "pixelcast", "RTMP", "turbopack", "webrtc", "WHEP"]
 }
